# aetherwake

./: .gitignore  ASSET_CREDITS.md  CMakeLists.txt  README.md
assets/data/: spells.json
assets/models/: detail_birch.glb  detail_birch_lod.glb  detail_boulder.glb  detail_branch_pile.glb  detail_clover.glb  detail_dry_grass.glb  detail_fern.glb  detail_fireweed.glb  detail_forest_litter.glb  detail_heather.glb  detail_log.glb  detail_lupine.glb  detail_meadow_grass.glb  detail_moss_mat.glb  detail_mushrooms.glb  detail_pine.glb  detail_pine_far.glb  detail_pine_impostor.glb  detail_pine_lod.glb  detail_pine_old_far.glb  detail_pine_old_impostor.glb  detail_reeds.glb  detail_scan_dead_trunk.glb  detail_scan_fern.glb  detail_scan_rock_01.glb  detail_scan_rock_02.glb  detail_scan_rock_03.glb  detail_scan_rock_04.glb  detail_scan_rock_05.glb  detail_scan_rock_06.glb  detail_scan_stump.glb  detail_sedge.glb  detail_shrub.glb  detail_snag.glb  detail_spruce.glb  detail_spruce_far.glb  detail_spruce_impostor.glb  detail_spruce_lod.glb  detail_spruce_old_far.glb  detail_spruce_old_impostor.glb  (+13 more)
assets/shaders/: post.frag  post.vert  world.frag  world.vert
docs/: GAME_DESIGN.md  MULTIPLAYER.md  NATIVE_ENGINE.md  PRODUCTION_PLAN.md
scripts/: bake_terrain_textures.py  bootstrap.ps1  build_detail_assets.py  extract_polyhaven_fir.py  inspect_character.py  prepare_polyhaven_scans.py  prepare_tripo_characters.py  render_wayfinder_preview.py
src/: main.cpp
src/engine/: EngineFeatures.h
src/game/: AbilitySystem.cpp  AbilitySystem.h  Types.h
src/net/: Replication.h
src/renderer/: GltfPreview.cpp  GltfPreview.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h
src/world/: WorldStreamer.cpp  WorldStreamer.h
tools/blender/: build_realistic_veiled_reach.py  build_veiled_reach.py
